k3s/development/traefik-global-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: global-redirect-https
  namespace: kube-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: global-redirect-https
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: global-redirect-https
      services:
        # A dummy service is required by the IngressRoute spec, 
        # but the middleware will trigger the redirect before it's reached.
        - name: traefik
          port: 80
